2008-02-13  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* src/cairo-support.c: (murrine_shade), (murrine_draw_innerborder),
	(murrine_set_gradient):
	* src/cairo-support.h:
	* src/murrine_draw.c: (murrine_draw_inset),
	(murrine_draw_highlight_and_shade), (murrine_draw_button),
	(murrine_draw_entry), (murrine_draw_spinbutton_down),
	(murrine_draw_slider_handle), (murrine_draw_progressbar_fill),
	(murrine_draw_menubar), (murrine_draw_frame), (murrine_draw_tab),
	(murrine_draw_separator), (murrine_draw_list_view_header),
	(murrine_draw_toolbar), (murrine_draw_menuitem),
	(murrine_draw_scrollbar_stepper), (murrine_draw_scrollbar_slider),
	(murrine_draw_selected_cell), (murrine_draw_statusbar),
	(murrine_draw_menu_frame), (murrine_draw_tooltip),
	(murrine_draw_radiobutton), (murrine_draw_checkbox),
	(murrine_draw_resize_grip):
	* src/murrine_draw_rgba.c: (murrine_draw_inset),
	(murrine_draw_highlight_and_shade), (murrine_rgba_draw_button),
	(murrine_rgba_draw_entry), (murrine_rgba_draw_progressbar_fill),
	(murrine_rgba_draw_menubar), (murrine_rgba_draw_toolbar),
	(murrine_rgba_draw_frame), (murrine_rgba_draw_tab),
	(murrine_rgba_draw_scrollbar_stepper),
	(murrine_rgba_draw_scrollbar_slider),
	(murrine_rgba_draw_radiobutton), (murrine_rgba_draw_checkbox),
	(murrine_rgba_draw_menu_frame):
	* src/murrine_style.c: (murrine_style_draw_layout),
	(murrine_style_realize):
	Nothing new, just changed the syntax for murrine_shade

2008-02-13  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* src/murrine_style.c: (murrine_style_draw_box):
	Don't read shadow-type in rgba mode, avoid glitches
	but the flat menubar will be unsupported

2008-02-13  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* src/murrine_style.c: (murrine_style_draw_box):
	Fix an error in make

2008-02-13  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* src/murrine_style.c: (murrine_style_draw_handle),
	(murrine_style_draw_box):
	Draw toolbaras and menubars just when shadow-type
	is not GTK_SHADOW_NONE
